; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_argv.c_argv_append.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_argv.c_argv_append.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.argv = type { i8**, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.argv*, i8*)* @argv_append to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @argv_append(%struct.argv* %0, i8* %1) #0 {
  %3 = alloca %struct.argv*, align 8
  %4 = alloca i8*, align 8
  store %struct.argv* %0, %struct.argv** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.argv*, %struct.argv** %3, align 8
  %6 = call i32 @argv_grow(%struct.argv* %5, i32 1)
  %7 = load i8*, i8** %4, align 8
  %8 = load %struct.argv*, %struct.argv** %3, align 8
  %9 = getelementptr inbounds %struct.argv, %struct.argv* %8, i32 0, i32 0
  %10 = load i8**, i8*** %9, align 8
  %11 = load %struct.argv*, %struct.argv** %3, align 8
  %12 = getelementptr inbounds %struct.argv, %struct.argv* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* %12, align 8
  %15 = sext i32 %13 to i64
  %16 = getelementptr inbounds i8*, i8** %10, i64 %15
  store i8* %7, i8** %16, align 8
  ret void
}

declare dso_local i32 @argv_grow(%struct.argv*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
